--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Odyssey_3160
-_version: 0.2.0
+_version: 0.2.1
 contributor:
   translator:
     agent_name: Pope, Alexander
@@ -41,5 +41,6 @@ subjects:
 - !lcsh 'Homer -- Translations into English'
 - !lcsh 'Odysseus (Greek mythology) -- Poetry'
 - !lcsh 'Epic poetry, Greek -- Translations into English'
+- GITenberg
 title: The Odyssey
 url: http://www.gutenberg.org/ebooks/3160
